--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "recharts": "^2.12.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
