feat: Enhance Gemini API key handling and UI
Introduces a fallback mechanism for Gemini API key retrieval, allowing users to set it in local storage when environment variables are unavailable. This improves usability for local development and runtime configurations.

Additionally, refactors the NumericKeypad component for better mobile responsiveness and updates the manifest and Vite configuration to utilize a dynamic avatar icon instead of a static Lucide icon, improving PWA asset loading and flexibility. Error handling for Gemini service calls is also improved to throw errors instead of returning null.

--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "name": "SmartLedger Pro",
   "short_name": "SmartLedger",
@@ -8,7 +9,7 @@
   "theme_color": "#F8F9FA",
   "icons": [
     {
-      "src": "https://cdn.lucide.dev/icon-512x512.png",
+      "src": "https://ui-avatars.com/api/?name=SL&background=0F172A&color=fff&size=512&font-size=0.5",
       "sizes": "512x512",
       "type": "image/png"
     }
